--- a/css-demos/styles.css
+++ b/css-demos/styles.css
@@ -22,6 +22,18 @@ h3 {
 }
 
 nav a {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: aqua;
+    text-decoration: none;
+}
+
+h2,
+h3 {
+    color: coral;
+}
+
+.box-model {
+    margin: 2em;
+    padding: 2em;
+    border: 2px;
+    border-style: solid;
+    border-color: blue;
 }
